--- a/.gitignore
+++ b/.gitignore
@@ -200,7 +200,14 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+# Ignore database files
+*.db
+*.sqlite
+*.sqlite3
+portfolio.db
 
+# Ignore admin files
+admin.html
 # Marimo
 marimo/_static/
 marimo/_lsp/
